--- a/estallido.html
+++ b/estallido.html
@@ -120,6 +120,14 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Escombros_en_Plaza_Italia_%282019%29.jpg/1280px-Escombros_en_Plaza_Italia_%282019%29.jpg"
+                   data-fresco-caption="Escombros dejados por las manifestaciones en Plaza Italia  (20/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Escombros_en_Plaza_Italia_%282019%29.jpg/1280px-Escombros_en_Plaza_Italia_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
 				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2e/Manifestantes_cubren_rostro_%282019%29.jpg/1280px-Manifestantes_cubren_rostro_%282019%29.jpg"
                    data-fresco-caption="Manifestantes sufren el efecto de los gases lacrimógenos lanzados por la policía (21/10/2019)"
                    data-fresco-group="gallery">
@@ -144,6 +152,22 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg/1280px-Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg"
+                   data-fresco-caption="Manifestantes con bandera mapuche y del Colo-Colo en Plaza Italia (23/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg/1280px-Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Piedras_en_Baquedano_%282019%29.jpg/1280px-Piedras_en_Baquedano_%282019%29.jpg"
+                   data-fresco-caption="Piedras en el suelo de calle Vicuña Mackenna luego de un enfrentamiento entre manifestantes y Fuerzas Especiales de Carabineros (23/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Piedras_en_Baquedano_%282019%29.jpg/1280px-Piedras_en_Baquedano_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
 				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Barricadas_y_El_Mercurio_%282019%29.jpg/1280px-Barricadas_y_El_Mercurio_%282019%29.jpg"
                    data-fresco-caption="Barricadas a las afueras de la Biblioteca Nacional (23/10/2019)"
                    data-fresco-group="gallery">
@@ -152,10 +176,10 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg/1280px-Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg"
-                   data-fresco-caption="Manifestantes con bandera mapuche y del Colo-Colo en Plaza Italia (23/10/2019)"
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Manifestantes_en_Plaza_Italia_%282019%29.jpg/1280px-Manifestantes_en_Plaza_Italia_%282019%29.jpg"
+                   data-fresco-caption="Manifestantes en Plaza Italia (25/10/2019)"
                    data-fresco-group="gallery">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg/1280px-Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg" alt="">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Manifestantes_en_Plaza_Italia_%282019%29.jpg/1280px-Manifestantes_en_Plaza_Italia_%282019%29.jpg" alt="">
 				</a>
 			</div>
 			
@@ -176,14 +200,6 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Manifestantes_en_Plaza_Italia_%282019%29.jpg/1280px-Manifestantes_en_Plaza_Italia_%282019%29.jpg"
-                   data-fresco-caption="Manifestantes en Plaza Italia (25/10/2019)"
-                   data-fresco-group="gallery">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Manifestantes_en_Plaza_Italia_%282019%29.jpg/1280px-Manifestantes_en_Plaza_Italia_%282019%29.jpg" alt="">
-				</a>
-			</div>
-			
-			<div class="col-lg-3 col-md-4 col-sm-6">
 				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Herida_por_bal%C3%ADn_%282019%29.jpg/1280px-Herida_por_bal%C3%ADn_%282019%29.jpg"
                    data-fresco-caption="Manifestante muestra la herida producida por un balín disparado por Fuerzas Especiales de Carabineros (28/10/2019)"
                    data-fresco-group="gallery">
@@ -196,6 +212,14 @@
                    data-fresco-caption="Barricada en la Alameda, a pasos de la Casa Central de la Universidad de Chile (28/10/2019)"
                    data-fresco-group="gallery">
 					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Barricada_en_la_Alameda_%282019%29.jpg/1280px-Barricada_en_la_Alameda_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Payasos_en_el_estallido_social_%282019%29.jpg/1280px-Payasos_en_el_estallido_social_%282019%29.jpg"
+                   data-fresco-caption="Payasos posan mostrando un envase de Mentholatum (04/11/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/Payasos_en_el_estallido_social_%282019%29.jpg/1280px-Payasos_en_el_estallido_social_%282019%29.jpg" alt="">
 				</a>
 			</div>
 			
