--- a/estallido.html
+++ b/estallido.html
@@ -104,18 +104,26 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Militar_en_Baquedano_%282019%29.jpg/1280px-Militar_en_Baquedano_%282019%29.jpg"
-                   data-fresco-caption="Militar hace guardia en Plaza Italia, el primer día del estado de excepción (19/10/2019)"
-                   data-fresco-group="gallery">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Militar_en_Baquedano_%282019%29.jpg/1280px-Militar_en_Baquedano_%282019%29.jpg" alt="">
-				</a>
-			</div>
-			
-			<div class="col-lg-3 col-md-4 col-sm-6">
 				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Militares_en_el_Paseo_Ahumada_%282019%29.jpg/1280px-Militares_en_el_Paseo_Ahumada_%282019%29.jpg"
                    data-fresco-caption="Militar patrulla el Paseo Ahumada montado en una tanqueta, el primer día del estado de excepción (19/10/2019)"
                    data-fresco-group="gallery">
 					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Militares_en_el_Paseo_Ahumada_%282019%29.jpg/1280px-Militares_en_el_Paseo_Ahumada_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Evade_como_Pi%C3%B1era_%282019%29.jpg/1280px-Evade_como_Pi%C3%B1era_%282019%29.jpg"
+                   data-fresco-caption="Mujer cruza la Alameda a la altura del Palacio de La Moneda. Atrás una pared tiene escrito &quot;Evade como Piñera&quot;. (19/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Evade_como_Pi%C3%B1era_%282019%29.jpg/1280px-Evade_como_Pi%C3%B1era_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Militar_en_Baquedano_%282019%29.jpg/1280px-Militar_en_Baquedano_%282019%29.jpg"
+                   data-fresco-caption="Militar hace guardia en Plaza Italia, el primer día del estado de excepción (19/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Militar_en_Baquedano_%282019%29.jpg/1280px-Militar_en_Baquedano_%282019%29.jpg" alt="">
 				</a>
 			</div>
 			
@@ -152,10 +160,10 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg/1280px-Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg"
-                   data-fresco-caption="Manifestantes con bandera mapuche y del Colo-Colo en Plaza Italia (23/10/2019)"
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Barricadas_y_El_Mercurio_%282019%29.jpg/1280px-Barricadas_y_El_Mercurio_%282019%29.jpg"
+                   data-fresco-caption="Barricadas a las afueras de la Biblioteca Nacional (23/10/2019)"
                    data-fresco-group="gallery">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg/1280px-Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg" alt="">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Barricadas_y_El_Mercurio_%282019%29.jpg/1280px-Barricadas_y_El_Mercurio_%282019%29.jpg" alt="">
 				</a>
 			</div>
 			
@@ -168,18 +176,10 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Barricadas_y_El_Mercurio_%282019%29.jpg/1280px-Barricadas_y_El_Mercurio_%282019%29.jpg"
-                   data-fresco-caption="Barricadas a las afueras de la Biblioteca Nacional (23/10/2019)"
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg/1280px-Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg"
+                   data-fresco-caption="Manifestantes con bandera mapuche y del Colo-Colo en Plaza Italia (23/10/2019)"
                    data-fresco-group="gallery">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Barricadas_y_El_Mercurio_%282019%29.jpg/1280px-Barricadas_y_El_Mercurio_%282019%29.jpg" alt="">
-				</a>
-			</div>
-			
-			<div class="col-lg-3 col-md-4 col-sm-6">
-				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Manifestantes_en_Plaza_Italia_%282019%29.jpg/1280px-Manifestantes_en_Plaza_Italia_%282019%29.jpg"
-                   data-fresco-caption="Manifestantes en Plaza Italia (25/10/2019)"
-                   data-fresco-group="gallery">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Manifestantes_en_Plaza_Italia_%282019%29.jpg/1280px-Manifestantes_en_Plaza_Italia_%282019%29.jpg" alt="">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg/1280px-Banderas_Colo-Colo_y_Mapuche_en_Plaza_Italia_%282019%29.jpg" alt="">
 				</a>
 			</div>
 			
@@ -188,6 +188,14 @@
                    data-fresco-caption="Manifestante posa con la bandera del equipo de fútbol Colo-Colo (25/10/2019)"
                    data-fresco-group="gallery">
 					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Colo_Colo_es_Chile_%282019%29.jpg/1280px-Colo_Colo_es_Chile_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Manifestantes_en_Plaza_Italia_%282019%29.jpg/1280px-Manifestantes_en_Plaza_Italia_%282019%29.jpg"
+                   data-fresco-caption="Manifestantes en Plaza Italia (25/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Manifestantes_en_Plaza_Italia_%282019%29.jpg/1280px-Manifestantes_en_Plaza_Italia_%282019%29.jpg" alt="">
 				</a>
 			</div>
 			
