--- a/estallido.html
+++ b/estallido.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-    <title>Estado de excepción (Santiago de Chile, 2019)</title>
+    <title>Estado de excepción (Santiago de Chile, 2019) - JM</title>
     <meta charset="UTF-8">
     <meta name="description" content="José Miguel Cordero">
     <meta name="keywords" content="photo, chile">
@@ -65,7 +65,7 @@
                         Fotos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="./estallido.html">Estado de excepción (Santiago de Chile, 2019)</a>
+                        <a class="dropdown-item" href="./estallido.html">Estado de excepción (Santiago, 2019)</a>
                         <a class="dropdown-item" href="#">Neón (pŕoximamente)</a>
 <!--                        <div class="dropdown-divider"></div>-->
 <!--                        <a class="dropdown-item" href="#">Foto aleatoria (próximamente)</a>-->
@@ -89,7 +89,7 @@
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
 				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Fuego_en_el_metro_Pedro_de_Valdivia_%282019%29.jpg/1280px-Fuego_en_el_metro_Pedro_de_Valdivia_%282019%29.jpg"
-                   data-fresco-caption="Metro Pedro de Valdivia prendiendo fuego en medio de las protestas (18/10/2019)"
+                   data-fresco-caption="Metro Pedro de Valdivia incendiándose en medio de las protestas (18/10/2019)"
                    data-fresco-group="gallery">
 					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Fuego_en_el_metro_Pedro_de_Valdivia_%282019%29.jpg/1280px-Fuego_en_el_metro_Pedro_de_Valdivia_%282019%29.jpg" alt="">
 				</a>
@@ -104,10 +104,26 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Militar_en_Baquedano_%282019%29.jpg/1280px-Militar_en_Baquedano_%282019%29.jpg"
+                   data-fresco-caption="Militar hace guardia en Plaza Italia, el primer día del estado de excepción (19/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Militar_en_Baquedano_%282019%29.jpg/1280px-Militar_en_Baquedano_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
 				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Militares_en_el_Paseo_Ahumada_%282019%29.jpg/1280px-Militares_en_el_Paseo_Ahumada_%282019%29.jpg"
                    data-fresco-caption="Militar patrulla el Paseo Ahumada montado en una tanqueta, el primer día del estado de excepción (19/10/2019)"
                    data-fresco-group="gallery">
 					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Militares_en_el_Paseo_Ahumada_%282019%29.jpg/1280px-Militares_en_el_Paseo_Ahumada_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Familia_cacerolea_en_Alameda_%282019%29.jpg/1280px-Familia_cacerolea_en_Alameda_%282019%29.jpg"
+                   data-fresco-caption="Familia caceroleando en la Alameda (19/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Familia_cacerolea_en_Alameda_%282019%29.jpg/1280px-Familia_cacerolea_en_Alameda_%282019%29.jpg" alt="">
 				</a>
 			</div>
 			
@@ -120,10 +136,10 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Militar_en_Baquedano_%282019%29.jpg/1280px-Militar_en_Baquedano_%282019%29.jpg"
-                   data-fresco-caption="Militar hace guardia en Plaza Italia, el primer día del estado de excepción (19/10/2019)"
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/FFEE_intenta_detener_a_observadores_del_INDH_%282019%29.jpg/1280px-FFEE_intenta_detener_a_observadores_del_INDH_%282019%29.jpg"
+                   data-fresco-caption="Fuerzas Especiales de Carabineros intenta detener a observadores del Instituto Nacional de Derechos Humanos (INDH) (20/10/2019)"
                    data-fresco-group="gallery">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/Militar_en_Baquedano_%282019%29.jpg/1280px-Militar_en_Baquedano_%282019%29.jpg" alt="">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/eb/FFEE_intenta_detener_a_observadores_del_INDH_%282019%29.jpg/1280px-FFEE_intenta_detener_a_observadores_del_INDH_%282019%29.jpg" alt="">
 				</a>
 			</div>
 			
@@ -132,6 +148,14 @@
                    data-fresco-caption="Escombros dejados por las manifestaciones en Plaza Italia  (20/10/2019)"
                    data-fresco-group="gallery">
 					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a6/Escombros_en_Plaza_Italia_%282019%29.jpg/1280px-Escombros_en_Plaza_Italia_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Manifestantes_con_carteles_%282019%29.jpg/1280px-Manifestantes_con_carteles_%282019%29.jpg"
+                   data-fresco-caption="Manifestantes muestran carteles en Plaza Italia (21/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Manifestantes_con_carteles_%282019%29.jpg/1280px-Manifestantes_con_carteles_%282019%29.jpg" alt="">
 				</a>
 			</div>
 			
@@ -160,18 +184,26 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Barricadas_y_El_Mercurio_%282019%29.jpg/1280px-Barricadas_y_El_Mercurio_%282019%29.jpg"
-                   data-fresco-caption="Barricadas a las afueras de la Biblioteca Nacional (23/10/2019)"
-                   data-fresco-group="gallery">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Barricadas_y_El_Mercurio_%282019%29.jpg/1280px-Barricadas_y_El_Mercurio_%282019%29.jpg" alt="">
-				</a>
-			</div>
-			
-			<div class="col-lg-3 col-md-4 col-sm-6">
 				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Piedras_en_Baquedano_%282019%29.jpg/1280px-Piedras_en_Baquedano_%282019%29.jpg"
                    data-fresco-caption="Piedras en el suelo de calle Vicuña Mackenna luego de un enfrentamiento entre manifestantes y Fuerzas Especiales de Carabineros (23/10/2019)"
                    data-fresco-group="gallery">
 					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ed/Piedras_en_Baquedano_%282019%29.jpg/1280px-Piedras_en_Baquedano_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Mujer_con_sombrilla_en_manifestaci%C3%B3n_%282019%29.jpg/1280px-Mujer_con_sombrilla_en_manifestaci%C3%B3n_%282019%29.jpg"
+                   data-fresco-caption="Manifestante se cubre con una sombrilla (23/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/77/Mujer_con_sombrilla_en_manifestaci%C3%B3n_%282019%29.jpg/1280px-Mujer_con_sombrilla_en_manifestaci%C3%B3n_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Barricadas_y_El_Mercurio_%282019%29.jpg/1280px-Barricadas_y_El_Mercurio_%282019%29.jpg"
+                   data-fresco-caption="Barricadas a las afueras de la Biblioteca Nacional (23/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Barricadas_y_El_Mercurio_%282019%29.jpg/1280px-Barricadas_y_El_Mercurio_%282019%29.jpg" alt="">
 				</a>
 			</div>
 			
@@ -192,6 +224,30 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Bandera_de_Rep%C3%BAblica_Dominicana_en_departamento_%282019%29.jpg/1280px-Bandera_de_Rep%C3%BAblica_Dominicana_en_departamento_%282019%29.jpg"
+                   data-fresco-caption="Familia se manifiesta desde su departamento con una bandera de República Dominicana (25/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/10/Bandera_de_Rep%C3%BAblica_Dominicana_en_departamento_%282019%29.jpg/1280px-Bandera_de_Rep%C3%BAblica_Dominicana_en_departamento_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Manifestantes_repletan_calles_en_Bustamante_%282019%29.jpg/1280px-Manifestantes_repletan_calles_en_Bustamante_%282019%29.jpg"
+                   data-fresco-caption="Manifestantes repletan calles en las cercanías del Parque Bustamante (25/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7f/Manifestantes_repletan_calles_en_Bustamante_%282019%29.jpg/1280px-Manifestantes_repletan_calles_en_Bustamante_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Micro_en_manifestaciones_en_la_Alameda_%282019%29.jpg/1280px-Micro_en_manifestaciones_en_la_Alameda_%282019%29.jpg"
+                   data-fresco-caption="Personas se manifiestan en una micro (bus) del recorrido 210 (25/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/69/Micro_en_manifestaciones_en_la_Alameda_%282019%29.jpg/1280px-Micro_en_manifestaciones_en_la_Alameda_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
 				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Manifestantes_en_Plaza_Italia_%282019%29.jpg/1280px-Manifestantes_en_Plaza_Italia_%282019%29.jpg"
                    data-fresco-caption="Manifestantes en Plaza Italia (25/10/2019)"
                    data-fresco-group="gallery">
@@ -208,18 +264,26 @@
 			</div>
 			
 			<div class="col-lg-3 col-md-4 col-sm-6">
-				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Herida_por_bal%C3%ADn_%282019%29.jpg/1280px-Herida_por_bal%C3%ADn_%282019%29.jpg"
-                   data-fresco-caption="Manifestante muestra la herida producida por un balín disparado por Fuerzas Especiales de Carabineros (28/10/2019)"
-                   data-fresco-group="gallery">
-					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Herida_por_bal%C3%ADn_%282019%29.jpg/1280px-Herida_por_bal%C3%ADn_%282019%29.jpg" alt="">
-				</a>
-			</div>
-			
-			<div class="col-lg-3 col-md-4 col-sm-6">
 				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Barricada_en_la_Alameda_%282019%29.jpg/1280px-Barricada_en_la_Alameda_%282019%29.jpg"
                    data-fresco-caption="Barricada en la Alameda, a pasos de la Casa Central de la Universidad de Chile (28/10/2019)"
                    data-fresco-group="gallery">
 					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Barricada_en_la_Alameda_%282019%29.jpg/1280px-Barricada_en_la_Alameda_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Edificio_se_quema_en_Santa_Rosa_%282019%29.jpg/1280px-Edificio_se_quema_en_Santa_Rosa_%282019%29.jpg"
+                   data-fresco-caption="Edificio quemándose en Alameda con Santa Rosa (28/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Edificio_se_quema_en_Santa_Rosa_%282019%29.jpg/1280px-Edificio_se_quema_en_Santa_Rosa_%282019%29.jpg" alt="">
+				</a>
+			</div>
+			
+			<div class="col-lg-3 col-md-4 col-sm-6">
+				<a class="gallery__item fresco" href="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Herida_por_bal%C3%ADn_%282019%29.jpg/1280px-Herida_por_bal%C3%ADn_%282019%29.jpg"
+                   data-fresco-caption="Manifestante muestra la herida producida por un balín disparado por Fuerzas Especiales de Carabineros (28/10/2019)"
+                   data-fresco-group="gallery">
+					<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5d/Herida_por_bal%C3%ADn_%282019%29.jpg/1280px-Herida_por_bal%C3%ADn_%282019%29.jpg" alt="">
 				</a>
 			</div>
 			
