--- a/heatmap_nunoa/index.html
+++ b/heatmap_nunoa/index.html
@@ -108,7 +108,7 @@
         // start loading data
         var DataFrame = dfjs.DataFrame;
 
-        var df = DataFrame.fromCSV('http://ollascomuneschile.cl/assets/data/71d2ae48-0f81-4815-a568-abc4bf41a234.csv')
+        var df = DataFrame.fromCSV('https://s3.us-east-2.amazonaws.com/ollascomuneschile.cl/assets/data/71d2ae48-0f81-4815-a568-abc4bf41a234.csv')
             .then(df => {
 
                 df.show();
