--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="css/slicknav.min.css"/>
-    <link rel="stylesheet" href="css/fresco.css"/>
+    <link rel="stylesheet" href="static/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="static/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="static/css/slicknav.min.css"/>
+    <link rel="stylesheet" href="static/css/fresco.css"/>
 
     <!-- Main Stylesheets -->
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="static/css/style.css"/>
     <script src="https://kit.fontawesome.com/7302a60ea2.js" crossorigin="anonymous"></script>
 
     <!--[if lt IE 9]>
@@ -67,8 +67,8 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="./estallido.html">Estado de excepción (Santiago, 2019)</a>
                         <a class="dropdown-item" href="#">Neón (pŕoximamente)</a>
-<!--                        <div class="dropdown-divider"></div>-->
-<!--                        <a class="dropdown-item" href="#">Foto aleatoria (próximamente)</a>-->
+                        <!--                        <div class="dropdown-divider"></div>-->
+                        <!--                        <a class="dropdown-item" href="#">Foto aleatoria (próximamente)</a>-->
                     </div>
                 </li>
             </ul>
@@ -81,7 +81,7 @@
     <div class="row">
         <div class="col-lg-4">
             <h3 class="mb-2 text-white">Sobre mí</h3>
-            <p>Hola! Soy <b>José Miguel Cordero</b>. Vivo en Santiago de Chile, tengo 24 años y soy estudiante de
+            <p>Hola! Soy <b>José Miguel Cordero Carvacho</b>. Vivo en Santiago de Chile, tengo 25 años y soy estudiante de
                 ingeniería en computación del <a class="pinky" href="https://www.dcc.uchile.cl/">DCC</a>.
                 Me interesa la fotografia, el análisis de datos y la discusión política.</p>
             <i class="far fa-envelope mr-1"></i>
@@ -90,6 +90,9 @@
                data-domain="dcc.uchile"
                data-tld="cl"
                onclick="window.location.href = 'mailto:' + this.dataset.name + '@' + this.dataset.domain + '.' + this.dataset.tld; return false;"></a>
+            <br>
+            <i class="fab fa-github mr-1"></i>
+            <a class="pinky" href="https://github.com/josemcorderoc">josemcorderoc</a>
         </div>
     </div>
 </div>
@@ -111,13 +114,13 @@
 <!-- Footer Section end -->
 
 <!--====== Javascripts & Jquery ======-->
-<script src="js/vendor/jquery-3.2.1.min.js"></script>
+<script src="static/js/vendor/jquery-3.2.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="js/jquery.slicknav.min.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/fresco.min.js"></script>
-<script src="js/main.js"></script>
+<script src="static/js/jquery.slicknav.min.js"></script>
+<script src="static/js/slick.min.js"></script>
+<script src="static/js/fresco.min.js"></script>
+<script src="static/js/main.js"></script>
 
 </body>
 </html>
