--- a/estallido.html
+++ b/estallido.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="css/slicknav.min.css"/>
-    <link rel="stylesheet" href="css/fresco.css"/>
+    <link rel="stylesheet" href="static/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="static/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="static/css/slicknav.min.css"/>
+    <link rel="stylesheet" href="static/css/fresco.css"/>
 
     <!-- Main Stylesheets -->
-    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="static/css/style.css"/>
     <script src="https://kit.fontawesome.com/7302a60ea2.js" crossorigin="anonymous"></script>
 
     <!--[if lt IE 9]>
@@ -333,13 +333,13 @@
 <!-- Footer Section end -->
 
 <!--====== Javascripts & Jquery ======-->
-<script src="js/vendor/jquery-3.2.1.min.js"></script>
+<script src="static/js/vendor/jquery-3.2.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="js/jquery.slicknav.min.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/fresco.min.js"></script>
-<script src="js/main.js"></script>
+<script src="static/js/jquery.slicknav.min.js"></script>
+<script src="static/js/slick.min.js"></script>
+<script src="static/js/fresco.min.js"></script>
+<script src="static/js/main.js"></script>
 
 </body>
 </html>
