--- a/estallido.html
+++ b/estallido.html
@@ -65,6 +65,7 @@
                         Fotos
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="./apariciones_prensa.html">Fotos en prensa</a>
                         <a class="dropdown-item" href="./estallido.html">Estado de excepción (Santiago, 2019)</a>
                         <a class="dropdown-item" href="#">Neón (pŕoximamente)</a>
 <!--                        <div class="dropdown-divider"></div>-->
